Define jvmArgs for jib containers
Signed-off-by: Petr Weinfurt <petr.weinfurt@broadcom.com>